<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="483dp"
                android:background="@drawable/veg"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="match_parent"
                    android:layout_height="254dp"
                    android:contentDescription="@string/ke"
                    app:srcCompat="@mipmap/cercle_background" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:text="@string/consulte"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="112dp"
                    android:text="@string/act"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="688dp"
                android:background="#EFECEC"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="347dp"
                    android:layout_height="222dp"
                    android:layout_gravity="center"
                    android:paddingTop="50dp"
                    android:text="@string/actu"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="269dp"
                    android:layout_gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/consulter"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="218dp"
                    android:layout_height="73dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button"
                    android:backgroundTint="@color/blue"
                    android:text="@string/read"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp"
                android:background="@color/blue"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:text="@string/info"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="188dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/border"
                    android:backgroundTint="@color/white"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/checkbox_on_background" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/infos"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="188dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/border"
                    android:backgroundTint="@color/white"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/imageViewn2"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/checkbox_on_background" />

                    <TextView
                        android:id="@+id/textViewn2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/infos"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="188dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/border"
                    android:backgroundTint="@color/white"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/imageViewn3"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/checkbox_on_background" />

                    <TextView
                        android:id="@+id/textViewn3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/infos"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="188dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/border"
                    android:backgroundTint="@color/white"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/imageViewn4"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/checkbox_on_background" />

                    <TextView
                        android:id="@+id/textViewn4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/infos"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="188dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/border"
                    android:backgroundTint="@color/white"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/imageViewn5"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/checkbox_on_background" />

                    <TextView
                        android:id="@+id/textViewn5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/infos"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="188dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/border"
                    android:backgroundTint="@color/white"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/imageViewn6"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/checkbox_on_background" />

                    <TextView
                        android:id="@+id/textViewn6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/infos"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

>>>>>>> aurik
</androidx.constraintlayout.widget.ConstraintLayout>